--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
         <!-- Akhir Contact -->
 
         <!-- Footer -->
-        <div class="footer">
-            <footer class="footer text-white text-center pb-5">
+        <div class="footer text-white text-center pb-5">
                 <p>
                     Created with <i class="bi bi-heart-fill text-danger"></i> by
                     <a
@@ -255,7 +254,6 @@
                         >Fariskha Agustino Farendra</a
                     >
                 </p>
-            </footer>
         </div>
         <!-- Akhir Footer -->
     </body>
