--- a/index.html
+++ b/index.html
@@ -100,18 +100,10 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 fs-5 text-center">
-                        <p>
-                            dolor fugiat et ipsum cillum minim et do proident
-                            aliquip ad Lorem amet qui eiusmod sit dolor cillum
-                            ad eiusmod
-                        </p>
+                        <p>Perkenalkan nama saya <b>Fariskha Agustino Farenda</b> a.k.a <b>Faris</b>. Saya berusia <b>15</b> tahun. Saya adalah seorang pelajar yang hobi membuat / memodifikasi suatu program.</p>
                     </div>
                     <div class="col-md-6 fs-5 text-center">
-                        <p>
-                            dolor fugiat et ipsum cillum minim et do proident
-                            aliquip ad Lorem amet qui eiusmod sit dolor cillum
-                            ad eiusmod
-                        </p>
+                        <p>wleo</p>
                     </div>
                 </div>
             </div>
