--- a/index.html
+++ b/index.html
@@ -100,11 +100,20 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 fs-5 text-center">
-                        <p>Perkenalkan nama saya <b>Fariskha Agustino Farenda</b> a.k.a <b>Faris</b>. Saya berusia <b>15</b> tahun. Saya adalah seorang pelajar yang hobi membuat / memodifikasi suatu program.</p>
+                        <p>
+                            Perkenalkan nama saya
+                            <b>Fariskha Agustino Farenda</b> a.k.a <b>Faris</b>.
+                            Saya berusia <b>15</b> tahun. Saya adalah seorang
+                            pelajar yang hobi membuat / memodifikasi suatu
+                            program.
+                        </p>
                     </div>
-                    <div class="col-md-6 fs-5 text-center">
-                        <p>wleo</p>
-                    </div>
+                    <div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
