--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             program.
                         </p>
                     </div>
-                    <div class="col-md-6 mb-3 justify-content-center">
+                    <div class="col-md-6 mb-3 justify-content-center text-center">
                         <div class="card" style="width: 18rem">
                             <div class="card-body">
                                 <h5 class="card-title">Pendidikan</h5>
