--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row text-center mb-3">
+                    <div class="col">
+                        <h2>Education & Achievement</h2>
+                    </div>
+                </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path
                     fill="#ede8f5"
