--- a/index.html
+++ b/index.html
@@ -110,10 +110,24 @@
                     </div>
                 </div>
                 <div class="row text-center mb-3">
-                <div class="col">
-                    <h2>Education & Achievement</h2>
+                    <div class="col">
+                        <h2>Education & Achievement</h2>
+                    </div>
                 </div>
-            </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 fs-5 text-center">
+                        <p>
+                            -sdn-smpn
+                        </p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-8 fs-5 text-center">
+                        <p>
+                            prestasi
+                        </p>
+                    </div>
+                </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path
