--- a/index.html
+++ b/index.html
@@ -109,23 +109,19 @@
                         </p>
                     </div>
                 </div>
-                <div class="row text-center mb-3">
+                <div class="row text-center mb-3 mt-3">
                     <div class="col">
                         <h2>Education & Achievement</h2>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 fs-5 text-center">
-                        <p>
-                            -sdn-smpn
-                        </p>
+                        <p>-sdn-smpn</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-8 fs-5 text-center">
-                        <p>
-                            prestasi
-                        </p>
+                        <p>prestasi</p>
                     </div>
                 </div>
             </div>
