--- a/index.html
+++ b/index.html
@@ -114,14 +114,38 @@
                         <h2>Education & Achievement</h2>
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-md-6 fs-5 text-center">
-                        <p>-sdn-smpn</p>
+                <div class="row mb-3">
+                    <div class="col-md-4 mb-3">
+                        <div class="card shadow-sm">
+                            <img
+                                src="img/projects/p1.png"
+                                class="card-img-top"
+                                alt="..."
+                            />
+                            <div class="card-body">
+                                <p class="card-text">
+                                    Some quick example text to build on the card
+                                    title and make up the bulk of the card's
+                                    content.
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-md-8 fs-5 text-center">
-                        <p>prestasi</p>
+                    <div class="col-md-4 mb-3">
+                        <div class="card shadow-sm">
+                            <img
+                                src="img/projects/p1.png"
+                                class="card-img-top"
+                                alt="..."
+                            />
+                            <div class="card-body">
+                                <p class="card-text">
+                                    Some quick example text to build on the card
+                                    title and make up the bulk of the card's
+                                    content.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
