--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <h2>Education & Achievement</h2>
                     </div>
                 </div>
-                <div class="row mb-3">
+                <div class="row mb-3 justify-content-center">
                     <div class="col-md-6 mb-3">
                         <div class="card shadow-sm">
                             <div class="card-body">
