--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="row mb-3 justify-content-center">
-                    <div class="col-md-6 mb-3">
+                    <div class="col-md-6 mb-3 margin-left: 1rem">
                         <div class="card shadow-sm">
                             <div class="card-body">
                                 <p class="card-text">
