--- a/index.html
+++ b/index.html
@@ -115,13 +115,10 @@
                     </div>
                 </div>
                 <div class="row mb-3 justify-content-center">
-                    <div class="col-md-6 mb-3 margin-left: 1rem">
+                    <div class="col-md-6 mb-3">
                         <div class="card shadow-sm">
                             <div class="card-body">
-                                <p class="card-text">
-                                    Some quick example text to build on the card
-                                    title and make up the bulk of the card's
-                                    content.
+                                <p class="card-text"><b>Education</b><br/></br>•Sdn
                                 </p>
                             </div>
                         </div>
