--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <div class="card shadow-sm">
                             <div class="card-body">
                                 <p class="card-text">
-                                    <p><b>Achievement</b><br><br>• Peserta <I>OSN-K IPA tingkat SMP 2023</i><br>• Tertolak <I>PPDB JATIM 2024 Tahap 1 & 2</i></p>
+                                    <p><b>Achievement</b><br><br>• Peserta <I>OSN-K IPA Tingkat SMP 2023</i><br>• Tertolak <I>PPDB JATIM 2024 Tahap 1 & 2</i></p>
                                 </p>
                             </div>
                         </div>
