--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="col-md-6 mb-3">
                         <div class="card shadow-sm">
                             <div class="card-body">
-                                <p class="card-text"><p><b>Education</b><br><br>• SDN Boro <I>(2015-2021)</i><br>• SMPN 1 Karangrejo <I>(2021-2024)</I></p>
+                                <p class="card-text"><b>Education</b><br><br>• SDN Boro <I>(2015-2021)</i><br>• SMPN 1 Karangrejo <I>(2021-2024)</I>
                                 </p>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
         </section>
         <!-- Akhir Projects -->
 
-<!-- Contact -->
+        <!-- Contact -->
         <section id="contact">
             <div class="container">
                 <div class="row text-center mb-1">
