--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <!-- Akhir Navbar -->
 
         <!-- Jumbotron -->
-        <section id="jumbotron text-center">
+        <section id="jumbotron">
+          <section class="jumbotron text-center">
             <img
                 src="img/profile.jpg"
                 alt="Fariskha Agustino Farendra"
@@ -87,6 +88,7 @@
                     d="M0,128L40,160C80,192,160,256,240,245.3C320,235,400,149,480,128C560,107,640,149,720,149.3C800,149,880,107,960,85.3C1040,64,1120,64,1200,85.3C1280,107,1360,149,1400,170.7L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
                 ></path>
             </svg>
+            </section>
         </section>
         <!-- Akhir Jumbotron -->
 
