--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
+        <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">Fariskha Agustino Farendra</a>
                 <button
@@ -247,7 +247,7 @@
                             <i class="bi bi-facebook"></i>
                         </a>
                     </div>
-                    
+
                     <!-- Logo Github -->
                     <div class="col-1 p-3 text-center">
                         <a
@@ -257,7 +257,7 @@
                             <i class="bi bi-github"></i>
                         </a>
                     </div>
-                    
+
                     <!-- Logo Youtube -->
                     <div class="col-1 p-3 text-center">
                         <a
